# getting_rusty

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/book/: Cargo.toml
crates/book/src/: main.rs
src/: config.rs  main.rs
src/routes/: binance.rs  mod.rs  user.rs
src/types/: utils.rs
