[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
binance_spot_connector_rust = { version = "1.1.0", features = ["full"] }
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
